fix gaps in card element

--- a/templates/LO.css
+++ b/templates/LO.css
@@ -1,6 +1,9 @@
 :root {
   --gap-v: 6px;
   --gap-h: 4px;
+
+  --gap-outter-v: 24px;
+  --gap-outter-h: 16px;
 }
 
 .grid,
